# writertools

./: .gitignore  .unibeautifyrc.json  README.md  example.env  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt  tox.ini
.github/workflows/: release.yml  test.yml
etc/pip/: requirements-dev.txt  requirements-test.in  requirements.in
plotboard/: apps.py  models.py  urls.py  views.py
plotboard/migrations/: 0001_initial.py
plotboard/templates/plotboard/: board_create.html  board_detail.html  board_list.html
templates/: base.html  index.html
templates/blocks/: header.html
wordtracker/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
wordtracker/migrations/: 0001_initial.py  0002_auto_20230211_1223.py
wordtracker/templates/wordtracker/: index.html  log_work.html  session_timer.html  stats.html
writertools/: asgi.py  auth.py  settings.py  urls.py  wsgi.py
